// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test withDataFetcher lifecyle 1`] = `
Object {
  "data": null,
  "error": null,
  "loading": true,
  "refetch": [Function],
}
`;

exports[`test withDataFetcher lifecyle 2`] = `
Object {
  "data": 42,
  "error": null,
  "loading": false,
  "refetch": [Function],
}
`;

exports[`test withDataFetcher lifecyle 3`] = `
Object {
  "data": 42,
  "error": null,
  "loading": true,
  "refetch": [Function],
}
`;

exports[`test withDataFetcher lifecyle 4`] = `
Object {
  "data": null,
  "error": "error",
  "loading": false,
  "refetch": [Function],
}
`;

exports[`test withDataFetcher lifecyle 5`] = `
Object {
  "data": null,
  "error": "error",
  "loading": true,
  "refetch": [Function],
}
`;

exports[`test withDataFetcher lifecyle 6`] = `
Object {
  "data": 21,
  "error": null,
  "loading": false,
  "refetch": [Function],
}
`;
